--- a/simplecv/templates/simplecv/docx.html
+++ b/simplecv/templates/simplecv/docx.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>{% load staticfiles %}
+<head>{% load static %}
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <style>
