--- a/simplecv/templates/simplecv/simplecv.html
+++ b/simplecv/templates/simplecv/simplecv.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>{% load staticfiles %}
+<!DOCTYPE html>{% load static %}
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
